{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 66,
  "lineage": "ee5135b1-0d5a-43e6-f315-e6159d3825f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e2c5ebc511d9420",
            "arn": "arn:aws:ec2:us-east-1:893694643697:elastic-ip/eipalloc-03e2c5ebc511d9420",
            "association_id": "eipassoc-0d59998c2a9b0b980",
            "domain": "vpc",
            "id": "eipalloc-03e2c5ebc511d9420",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05bf9571d63507753",
            "private_dns": "ip-10-0-0-115.ec2.internal",
            "private_ip": "10.0.0.115",
            "public_dns": "ec2-98-83-252-189.compute-1.amazonaws.com",
            "public_ip": "98.83.252.189",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "studies_app-elastic-ip-0"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "studies_app-elastic-ip-0"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6a8e9018128f662",
            "arn": "arn:aws:ec2:us-east-1:893694643697:elastic-ip/eipalloc-0b6a8e9018128f662",
            "association_id": "eipassoc-08c12f4f478c027da",
            "domain": "vpc",
            "id": "eipalloc-0b6a8e9018128f662",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0838b68a7fdea4402",
            "private_dns": "ip-10-0-1-241.ec2.internal",
            "private_ip": "10.0.1.241",
            "public_dns": "ec2-100-26-71-81.compute-1.amazonaws.com",
            "public_ip": "100.26.71.81",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "studies_app-elastic-ip-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "studies_app-elastic-ip-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893694643697:internet-gateway/igw-0cb5bb02d5967d1b7",
            "id": "igw-0cb5bb02d5967d1b7",
            "owner_id": "893694643697",
            "region": "us-east-1",
            "vpc_id": "vpc-09972bd77e7125dab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e26a84ae3279938b",
            "original_route_table_id": "rtb-0493b0065e6c1e7c8",
            "region": "us-east-1",
            "route_table_id": "rtb-011bf267128a53afc",
            "vpc_id": "vpc-09972bd77e7125dab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.default",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_ngat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e2c5ebc511d9420",
            "association_id": "eipassoc-0d59998c2a9b0b980",
            "connectivity_type": "public",
            "id": "nat-0469cdc5d5cba8e08",
            "network_interface_id": "eni-05bf9571d63507753",
            "private_ip": "10.0.0.115",
            "public_ip": "98.83.252.189",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04c95905ef6615f17",
            "tags": {
              "Environment": "development",
              "Name": "studies_app-ngat-main-0"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "studies_app-ngat-main-0"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6a8e9018128f662",
            "association_id": "eipassoc-08c12f4f478c027da",
            "connectivity_type": "public",
            "id": "nat-0176c99e190c24999",
            "network_interface_id": "eni-0838b68a7fdea4402",
            "private_ip": "10.0.1.241",
            "public_ip": "100.26.71.81",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e0e994a87992456d",
            "tags": {
              "Environment": "development",
              "Name": "studies_app-ngat-main-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "studies_app-ngat-main-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cb5bb02d5967d1b7",
            "id": "r-rtb-011bf267128a53afc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-011bf267128a53afc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.public_igw",
            "aws_route_table.default",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ngat_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00f6906b1c62943b01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0469cdc5d5cba8e08",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-00f6906b1c62943b0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.main_ngat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-053bdd55b2e9d8dd31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0176c99e190c24999",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-053bdd55b2e9d8dd3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.main_ngat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893694643697:route-table/rtb-011bf267128a53afc",
            "id": "rtb-011bf267128a53afc",
            "owner_id": "893694643697",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb5bb02d5967d1b7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "studies_app-rt-default"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "studies_app-rt-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-09972bd77e7125dab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893694643697:route-table/rtb-00f6906b1c62943b0",
            "id": "rtb-00f6906b1c62943b0",
            "owner_id": "893694643697",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0469cdc5d5cba8e08",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "studies_app-rt-0"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "studies_app-rt-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-09972bd77e7125dab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893694643697:route-table/rtb-053bdd55b2e9d8dd3",
            "id": "rtb-053bdd55b2e9d8dd3",
            "owner_id": "893694643697",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0176c99e190c24999",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "studies_app-rt-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "studies_app-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-09972bd77e7125dab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc4d11fbb7d1cf16",
            "region": "us-east-1",
            "route_table_id": "rtb-00f6906b1c62943b0",
            "subnet_id": "subnet-01242d20d7d91ece5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8bbc40bbaa0d399",
            "region": "us-east-1",
            "route_table_id": "rtb-053bdd55b2e9d8dd3",
            "subnet_id": "subnet-0d71a587704d2f795"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0183ce83d285add65",
            "region": "us-east-1",
            "route_table_id": "rtb-011bf267128a53afc",
            "subnet_id": "subnet-04c95905ef6615f17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.default",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0665a58ae79f56886",
            "region": "us-east-1",
            "route_table_id": "rtb-011bf267128a53afc",
            "subnet_id": "subnet-0e0e994a87992456d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.default",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893694643697:subnet/subnet-01242d20d7d91ece5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01242d20d7d91ece5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893694643697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "studies_app-private-subnet-0"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "studies_app-private-subnet-0"
            },
            "vpc_id": "vpc-09972bd77e7125dab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893694643697:subnet/subnet-0d71a587704d2f795",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d71a587704d2f795",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893694643697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "studies_app-private-subnet-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "studies_app-private-subnet-1"
            },
            "vpc_id": "vpc-09972bd77e7125dab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893694643697:subnet/subnet-04c95905ef6615f17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c95905ef6615f17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893694643697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "studies_app-public-subnet-0"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "studies_app-public-subnet-0"
            },
            "vpc_id": "vpc-09972bd77e7125dab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893694643697:subnet/subnet-0e0e994a87992456d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0e994a87992456d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893694643697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "studies_app-public-subnet-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "studies_app-public-subnet-1"
            },
            "vpc_id": "vpc-09972bd77e7125dab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893694643697:vpc/vpc-09972bd77e7125dab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02218a6388818254b",
            "default_route_table_id": "rtb-0493b0065e6c1e7c8",
            "default_security_group_id": "sg-09af38849694661b6",
            "dhcp_options_id": "dopt-0bae826e2d72bed45",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09972bd77e7125dab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0493b0065e6c1e7c8",
            "owner_id": "893694643697",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "studies_app-vpc"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "studies_app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}